[project]
name = "chat-bot-python"
version = "0.1.0"
description = ""
authors = [
    {name = "savvazot",email = "zotov.savva@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.1,<23.0)",
    "openai (>=1.84.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
